implemented party pics section

--- a/WebContent/WEB-INF/templates/includes/bootstrap.html
+++ b/WebContent/WEB-INF/templates/includes/bootstrap.html
@@ -87,6 +87,11 @@ body {
 	.tree li a:hover+ul ul::before {
 	border-color: #94a0b4;
 }
+
+.aside-menu {position: relative;
+    
+    
+}
 </style>
 </div>
 
