--- a/WebContent/WEB-INF/templates/includes/footer.html
+++ b/WebContent/WEB-INF/templates/includes/footer.html
@@ -1,8 +1,10 @@
-<nav th:fragment="footer">
+<nav th:fragment="footer" class="navbar navbar-inverse navbar-fixed-bottom bg-dark">
+
 	<div class="container-fluid" >
-          <form class="navbar-form navbar-left"><p style="color:white;">&copy; 2018 Die Eierbären</p></form>
+	
+          <form class="navbar-form navbar-left">&copy; 2018 Die Eierbären</form>
           
-         <form class="navbar-form navbar-right"><a style="color:white;" th:href="@{/about}">About</a></form>
+         <form class="navbar-form navbar-right"><a th:href="@{/about}">About</a></form>
           
           
 
