--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -1,31 +1,16 @@
 
-<nav th:fragment="search" class="navbar navbar-inverse navbar-fixed-top">
+<nav th:fragment="search" class="navbar navbar-inverse navbar-fixed-top bg-dark">
 	<div class="container-fluid">
-
-		<form class="navbar-form navbar-right" th:action="@{/logout}"
-			method="post">
-			<input class="btn btn-danger" type="submit" value="Sign Out" />
-		</form>
-
-
-
 		<!-- HTML form with search textbox and submit button-->
-		<form class="navbar-form navbar-right" role="search" method="post"
-			action="searchUsers">
-			<div class="input-group">
-				<input type="text" class="form-control" placeholder="Search for..."
-					name="searchString"> <span class="input-group-btn">
-					<button class="btn btn-default" type="submit">Go!</button>
-				</span>
-			</div>
-		</form>
-
 		
 		<form class="navbar-form navbar-left">
 			<a style="color:white; font-size:200%;" th:href="@{/}"> COMMUNE-IC8</a>		
 		</form>
 		
-
+		<form class="navbar-form navbar-right" th:action="@{/logout}"
+			method="post">
+			<input class="btn btn-danger" type="submit" value="Sign Out" />
+		</form>
 
 	</div>
 </nav>
