--- a/WebContent/WEB-INF/templates/login.html
+++ b/WebContent/WEB-INF/templates/login.html
@@ -6,9 +6,44 @@
 <div th:replace="~{includes/bootstrap :: bootstrapMeta}" />
 <title>COMMUNE-IC8</title>
 <div th:replace="~{includes/bootstrap :: bootstrapCSS}" />
+
 </head>
-<body>
-	<div class="container" role="main">
+<body class="bg-dark">
+	<div class="page-header text-center" style="border-bottom:5px;"><h1 class ="text-light" >Welcome to COMMUNE-IC8</h1></div>
+	<div class="container" role="main" style="width:25rem;">
+		<div class ="centering text-center">
+			<br> <br>
+			<div class="card text-white bg-dark " >
+				<div class="card-header">Login</div>
+				<div class="card-body">
+					<form th:action="@{/login}" method="post">
+						<h1 class="form-signin-heading">Please sign in</h1>
+
+						<div th:if="${param.error}" class="alert alert-danger">Invalid
+							username and password.</div>
+
+						<div th:if="${param.logout}" class="alert alert-success">You
+							have been logged out.</div>
+
+						<label for="inputEmail" class="sr-only">Username</label> <input
+							type="text" id="username" class="form-control" placeholder="User"
+							required autofocus name="username"> <br>
+						<label for="inputPassword" class="sr-only">Password</label> <input
+							type="password" id="password" class="form-control"
+							placeholder="Password" required name="password"><br>
+						<br>
+						<button class="btn btn-dark btn-lg btn-block" type="submit">
+							Sign in</button>
+				</div>
+				</form>
+			</div>
+			</div>
+						
+			</div>
+
+
+
+	<!-- 
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4">
 				<form th:action="@{/login}" method="post">
@@ -31,7 +66,8 @@
 				</form>
 			</div>
 		</div>
-	</div>
+		 -->
+
 	<!--  End of container -->
 </body>
 </html>
