changed party pics icons

--- a/WebContent/WEB-INF/templates/includes/sidebar.html
+++ b/WebContent/WEB-INF/templates/includes/sidebar.html
@@ -21,7 +21,7 @@
 			
 			<li class="nav-item"><a class="nav-link"
 				th:href="@{/showPartyImg}"> <i
-					class="nav-icon cui-speedometer"></i> Party Pics
+					class="nav-icon cui-star"></i> Party Pics
 			</a></li>
 			
 			<li class="nav-item"><a class="nav-link"
