--- a/WebContent/WEB-INF/templates/listPartyPics.html
+++ b/WebContent/WEB-INF/templates/listPartyPics.html
@@ -88,18 +88,18 @@
 
 						<li sec:authorize="hasRole('USER')" class="nav-item"><a
 							class="nav-link" th:href="@{/uploadPartyPic}"> <i
-								class="nav-icon cui-speedometer"></i> Add New Picture
+								class="nav-icon cui-cloud-upload"></i> Add New Picture
 						</a></li>
 
 
 						<li sec:authorize="hasRole('USER')" class="nav-item"><a
 							class="nav-link" th:href="@{/todoPdf}" th:value="pdf"> <i
-								class="nav-icon cui-speedometer"></i> Export PDF
+								class="nav-icon cui-cloud-download"></i> Export PDF
 						</a></li>
 
 						<li sec:authorize="hasRole('USER')" class="nav-item"><a
 							class="nav-link" th:href="@{/todoExcel}" th:value="excel"> <i
-								class="nav-icon cui-speedometer"></i> Export Excel
+								class="nav-icon cui-cloud-download"></i> Export Excel
 						</a></li>
 
 
