--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -80,13 +80,12 @@
 
 
 						<td sec:authorize="hasRole('ADMIN')"><a
-							th:href="@{/changeGrocery(id=${grocery.id})}"
-							class="btn btn-xs btn-success"> <span
-								class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
-						</a> <a th:href="@{/delete(id=${grocery.id})}"
-							class="btn btn-xs btn-danger"> <span
-								class="cui-Trash" aria-hidden="true"></span>
-								Delete
+							th:href="@{/changeGrocery(id=${grocery.id})}"><button type="button" class="btn btn-xs btn-warning cui-wrench">
+							<span aria-hidden="true"></span> Edit</button>
+						</a> 
+						<a th:href="@{/delete(id=${grocery.id})}"><button type="button" class="btn btn-xs btn-danger cui-trash">
+							 <span aria-hidden="true"></span>
+								Delete</button>
 						</a></td>
 					</tr>
 					<!--  list all items ----------------------------------------------------------- -->
