--- a/WebContent/WEB-INF/templates/listUsers.html
+++ b/WebContent/WEB-INF/templates/listUsers.html
@@ -95,19 +95,19 @@
 								target="_blank" th:text="${user.userimage.filename}"></a>
 						</span> <span th:unless="${user.userimage != null}"> -- no file --- </span>
 						<td><a th:href="@{upload(id=${user.id})}">
-								<button type="button" class="btn btn-xs btn-success">
-									<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+								<button type="button" class="btn btn-xs btn-success cui-cloud-upload">
+									<span  aria-hidden="true"></span>
 									Upload
 								</button></a>
-								<a sec:authorize="hasRole('ADMIN')" th:href="@{/changeUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-warning">
-									<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+								<a sec:authorize="hasRole('ADMIN')" th:href="@{/changeUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-warning cui-wrench">
+									<span aria-hidden="true"></span>
 									Edit
 								</button></a>
 								
 								
 								
-								<a sec:authorize="hasRole('ADMIN')" th:href="@{/deleteUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-danger">
-									<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+								<a sec:authorize="hasRole('ADMIN')" th:href="@{/deleteUser(id=${user.id})}"><button type="button" class="btn btn-xs btn-danger cui-trash">
+									<span aria-hidden="true"></span>
 									Delete
 								</button></a>
 						</td>
