fixed a bug in the flatcontroller

--- a/WebContent/WEB-INF/templates/editFlat.html
+++ b/WebContent/WEB-INF/templates/editFlat.html
@@ -30,8 +30,8 @@
 							<label for="flatName" class="col-md-2 control-label">
 								Name </label>
 							<div class="col-md-10">
-								<input class="form-control" type="text" name="flatName"
-									th:value="${flat} ? ${flat.flatName}">
+								<input class="form-control" type="text" name="name"
+									th:value="${flat} ? ${flat.name}">
 							</div>
 						</div>
 
