changed chanceTodo in TodoController

--- a/WebContent/WEB-INF/templates/editTodo.html
+++ b/WebContent/WEB-INF/templates/editTodo.html
@@ -30,8 +30,8 @@
 							<label for="todoName" class="col-md-2 control-label">
 								Name </label>
 							<div class="col-md-10">
-								<input class="form-control" type="text" name="todoName"
-									th:value="${todo} ? ${todo.todoName}">
+								<input class="form-control" type="text" name="name"
+									th:value="${todo} ? ${todo.name}">
 							</div>
 						</div>
 
