--- a/WebContent/WEB-INF/templates/login.html
+++ b/WebContent/WEB-INF/templates/login.html
@@ -13,11 +13,11 @@
 	<div class="container" role="main" style="width:25rem;">
 		<div class ="centering text-center">
 			<br> <br>
-			<div class="card text-white bg-dark " >
-				<div class="card-header">Login</div>
+			<div class="card text-white bg-dark " style="border:none;" >
+				
 				<div class="card-body">
 					<form th:action="@{/login}" method="post">
-						<h1 class="form-signin-heading">Please sign in</h1>
+						<h1 class="form-signin-heading">Please sign in</h1><br>
 
 						<div th:if="${param.error}" class="alert alert-danger">Invalid
 							username and password.</div>
