--- a/WebContent/WEB-INF/templates/uploadPartyPic.html
+++ b/WebContent/WEB-INF/templates/uploadPartyPic.html
@@ -24,6 +24,26 @@
 								<input class="form-control" id="inputFile" type="file" name="myFile">
 							</div>
 						</div>
+						<!-- Image Title-->
+						<div class="form-group">
+							<label class="col-md-2 control-label"> Image title </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="imgtitle"
+									th:value="${image} ? ${image.imgtitle}">
+							</div>
+						</div>
+						
+							<!-- Image Title-->
+						<div class="form-group">
+							<label class="col-md-2 control-label"> Image Text </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="imgtext"
+									th:value="${image} ? ${image.imgtext}">
+							</div>
+						</div>
+						
+						
+						
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Upload</button>
