--- a/WebContent/WEB-INF/templates/uploadPartyPic.html
+++ b/WebContent/WEB-INF/templates/uploadPartyPic.html
@@ -47,7 +47,7 @@
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Upload</button>
-								<a th:href="listPartyPics">
+								<a href=showPartyImg>
 									<button type="button" class="btn btn-default">Cancel</button>
 								</a>
 							</div>
