--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -66,7 +66,7 @@
 				
 				<p> Want to <a href="https://www.youtube.com/watch?v=-2U0Ivkn2Ds">say something?</a> Just leave a comment in the <a th:href="listComments">Comment Section</a></p>
 
-				<p> Or just visit <a th:href="showUserProfile" class="card-link">Your Profile</a></p>
+				<p> Or just visit <a th:href="showUserProfile" class="card-link">Your Profile!</a></p>
 			</div>
 		</div>
 
@@ -82,6 +82,27 @@
 
 		<!---------------------------RIGHT-SIDEBAR --------------------------------------->
 
+	 <aside class="aside-menu bg-dark">
+	
+	<div class="card bg-dark mx-auto" >
+		
+		<img class="card-img-top" th:unless="${userimage} == null" th:src="${userimage}" >
+			
+			<div class="card-body">
+				<h2 class="card-title" th:text="${'@' + user.getUsername()}"></h2>
+				<p class="card-text" style="font-size:120%;">
+					<ul style="list-style-type:none; padding-left:0;">
+						<li th:text="${'Firstname: ' + user.getFirstname()}"></li>
+						<li th:text="${'Lastname: ' + user.getLastname()}"></li>
+						<li th:text="${'Mobilenumber: ' + user.getMobilenumber()}"></li>
+						<li th:text="${'E-Mail: ' + user.getEmail()}"></li>
+						<li th:text="${'Day of Birth: ' + #dates.format(user.birthdate,'dd.MM.yyyy')}"></li>
+												
+					</ul>
+				</p>
+	</div>
+	</div>
+	</aside>
 		
 	</div>
 	<!---------------------------RIGHT-SIDEBAR --------------------------------------->
